--- a/register.html
+++ b/register.html
@@ -287,7 +287,7 @@
     <div class="logo">
       <img src="https://i.postimg.cc/x1fDPQPX/pngtree-honey-bee-logo-design-vector-png-image-12507314-removebg-preview.png" alt="BeeMazing Logo">
     </div>
-    <h2 id="formTitle">Register z8</h2>
+    <h2 id="formTitle">Register z9</h2>
     <form id="authForm" novalidate>
       <div id="emailGroup" class="input-group email">
         <input type="email" id="email" placeholder="Email" required />
@@ -390,7 +390,8 @@ const resetSubmitBtn = document.getElementById("resetSubmitBtn");
     const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
   
     // Password strength validation (minimum 8 characters, at least one number)
-    const passwordRegex = /^(?=.*\d).{8,}$/;
+    // const passwordRegex = /^(?=.*\d).{8,}$/;
+     // Password strength validation (minimum 8 characters, at least one number)
   
     // Token format validation (64-character hex string)
     const tokenRegex = /^[0-9a-fA-F-]{32,}$/; // Allow hyphens
@@ -425,11 +426,11 @@ const resetSubmitBtn = document.getElementById("resetSubmitBtn");
       message.textContent = "❌ Please enter a valid email";
       return;
     }
-    if (!passwordRegex.test(password)) {
+    /* if (!passwordRegex.test(password)) {
       message.style.color = "#D32F2F";
       message.textContent = "❌ Password must be at least 8 characters and include a number";
       return;
-    }
+    } */
     if (isRegistering && password !== confirmPassword) {
       message.style.color = "#D32F2F";
       message.textContent = "❌ Passwords do not match";
@@ -497,11 +498,11 @@ resetPasswordForm.addEventListener("submit", async (e) => {
   const confirmNewPasswordValue = confirmNewPassword.value.trim();
 
   // Validate password
-  if (!passwordRegex.test(newPasswordValue)) {
+  /* if (!passwordRegex.test(newPasswordValue)) {
     resetMessage.style.color = "#D32F2F";
     resetMessage.textContent = "❌ Password must be at least 8 characters and include a number";
     return;
-  }
+  } */
   if (newPasswordValue !== confirmNewPasswordValue) {
     resetMessage.style.color = "#D32F2F";
     resetMessage.textContent = "❌ Passwords do not match";
