--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -545,46 +545,89 @@ async function fetchUsers() {
   }
 }
 
+
+
+
+
 async function handleDecision(title, date, index, decision, user, event) {
-  try {
-    const button = event.target;
-    const taskEntry = button.closest(".task-entry");
-    const buttons = taskEntry.querySelectorAll("button");
-    buttons.forEach(btn => {
-      btn.disabled = true;
-      btn.style.opacity = "0.5";
-    });
+    try {
+        const button = event.target;
+        const taskEntry = button.closest(".task-entry");
+        const buttons = taskEntry.querySelectorAll("button");
+        buttons.forEach(btn => {
+            btn.disabled = true;
+            btn.style.opacity = "0.5";
+        });
 
-    const response = await fetch("https://beemazing.onrender.com/api/review-task", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        adminEmail,
-        title,
-        date,
-        selectedDate,
-        user,
-        decision
-      })
-    });
+        // Fetch tasks to get task.reward
+        const tasksResponse = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
+            cache: "no-store"
+        });
+        if (!tasksResponse.ok) throw new Error(`HTTP error ${tasksResponse.status}`);
+        const { tasks } = await tasksResponse.json();
+        const task = tasks.find(t => t.title === title && t.date === date);
+        if (!task) throw new Error("Task not found");
 
-    const data = await response.json();
-    if (!response.ok) throw new Error(data.error || "Failed to process decision");
+        // Submit the decision
+        const response = await fetch("https://beemazing.onrender.com/api/review-task", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+                adminEmail,
+                title,
+                date,
+                selectedDate,
+                user,
+                decision
+            })
+        });
 
-    setTimeout(() => loadTasks(), 500);
-  } catch (err) {
-    console.error("Error processing decision:", err);
-    const errorDiv = document.createElement("div");
-    errorDiv.style.color = "red";
-    errorDiv.textContent = `Error: ${err.message}`;
-    taskEntry.appendChild(errorDiv);
-    taskEntry.querySelectorAll("button").forEach(btn => {
-      btn.disabled = false;
-      btn.style.opacity = "1";
-    });
-    setTimeout(() => errorDiv.remove(), 3000);
-  }
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Failed to process decision");
+
+        // If decision is "accept", award the task reward to the user
+        if (decision === "accept") {
+            const rewardAmount = task.reward || 0;
+            if (rewardAmount > 0) {
+                await fetch("https://beemazing.onrender.com/api/rewards", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ adminEmail, user, amount: rewardAmount })
+                });
+                const successDiv = document.createElement("div");
+                successDiv.style.color = "green";
+                successDiv.textContent = `${user} earned ${rewardAmount} honey!`;
+                taskEntry.appendChild(successDiv);
+                setTimeout(() => successDiv.remove(), 3000);
+
+                // Notify other tabs (e.g., users.html) of the reward update
+                localStorage.setItem("rewardUpdate", JSON.stringify({
+                    user,
+                    amount: rewardAmount,
+                    timestamp: Date.now()
+                }));
+            }
+        }
+
+        setTimeout(() => loadTasks(), 500);
+    } catch (err) {
+        console.error("Error processing decision:", err);
+        const errorDiv = document.createElement("div");
+        errorDiv.style.color = "red";
+        errorDiv.textContent = `Error: ${err.message}`;
+        taskEntry.appendChild(errorDiv);
+        taskEntry.querySelectorAll("button").forEach(btn => {
+            btn.disabled = false;
+            btn.style.opacity = "1";
+        });
+        setTimeout(() => errorDiv.remove(), 3000);
+    }
 }
+
+
+
+
+
 
 async function handleReplace(title, date, index, originalUser, event) {
   const taskEntry = event.target.closest(".task-entry");
