--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -915,7 +915,7 @@ document.addEventListener("DOMContentLoaded", () => {
         });
 
         // Remove the resetUserReward call after confirming the reset
-        // resetUserReward(userName);
+        resetUserReward(userName);
 
         populateUserDropdown(userName);
         loadUserTasks(userName);
