--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -1160,9 +1160,21 @@ async function loadUserReward(userName) {
         const data = await response.json();
         if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
         const rewards = data.rewards || {};
-        const userReward = Number(rewards[userName]) || 0;
-        console.log(`loadUserReward: userName=${userName}, userReward=${userReward}`);
-        document.getElementById("rewardAmount").textContent = userReward.toString();
+        const rawReward = rewards[userName] || 0;
+        const userReward = Number(rawReward);
+
+        // Log the raw and parsed values for debugging
+        console.log(`loadUserReward: userName=${userName}, rawReward=${rawReward}, userReward=${userReward}`);
+
+        // Handle extremely large numbers or invalid values
+        if (isNaN(userReward) || !isFinite(userReward)) {
+            console.warn(`Invalid reward value for ${userName}: ${rawReward}. Resetting to 0.`);
+            await resetUserReward(userName);
+            document.getElementById("rewardAmount").textContent = "0";
+        } else {
+            // Use toFixed(0) to avoid scientific notation and ensure integer display
+            document.getElementById("rewardAmount").textContent = userReward.toFixed(0);
+        }
     } catch (err) {
         console.error("Error loading user reward:", err);
         document.getElementById("rewardAmount").textContent = "Error";
@@ -1190,10 +1202,18 @@ async function updateUserReward(userName, amount) {
         const data = await response.json();
         if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
         const rewards = data.rewards || {};
-        const currentReward = Number(rewards[userName]) || 0;
+        const rawReward = rewards[userName] || 0;
+        const currentReward = Number(rawReward);
 
         // Log the values for debugging
-        console.log(`updateUserReward: userName=${userName}, currentReward=${currentReward}, numericAmount=${numericAmount}`);
+        console.log(`updateUserReward: userName=${userName}, rawReward=${rawReward}, currentReward=${currentReward}, numericAmount=${numericAmount}`);
+
+        // Handle invalid reward values
+        if (isNaN(currentReward) || !isFinite(currentReward)) {
+            console.warn(`Invalid reward value for ${userName}: ${rawReward}. Resetting to 0.`);
+            await resetUserReward(userName);
+            return;
+        }
 
         // Calculate new reward
         const newReward = currentReward + numericAmount;
@@ -1217,7 +1237,11 @@ async function updateUserReward(userName, amount) {
         throw err;
     }
 }
-        
+
+
+
+
+
 
 
 
@@ -1230,12 +1254,23 @@ async function sellReward(userName, amount) {
         const data = await response.json();
         if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
         const rewards = data.rewards || {};
-        const userReward = Number(rewards[userName]) || 0;
+        const rawReward = rewards[userName] || 0;
+        const userReward = Number(rawReward);
+
+        // Log the raw and parsed values
+        console.log(`sellReward: userName=${userName}, rawReward=${rawReward}, userReward=${userReward}`);
+
+        // Handle invalid or extremely large reward values
+        if (isNaN(userReward) || !isFinite(userReward)) {
+            console.warn(`Invalid reward value for ${userName}: ${rawReward}. Resetting to 0.`);
+            await resetUserReward(userName);
+            return;
+        }
 
         // Ensure the amount to sell is a number
         const numericAmount = Number(amount);
-        if (isNaN(numericAmount)) {
-            throw new Error("Amount to sell must be a valid number");
+        if (isNaN(numericAmount) || numericAmount <= 0) {
+            throw new Error("Amount to sell must be a valid positive number");
         }
 
         // Check if the user has enough honey to sell
@@ -1243,12 +1278,19 @@ async function sellReward(userName, amount) {
             // Calculate the new reward after selling
             const newReward = userReward - numericAmount;
 
+            // Log the calculation
+            console.log(`sellReward: userReward=${userReward}, numericAmount=${numericAmount}, newReward=${newReward}`);
+
             // Update the server with the new total
-            await fetch("https://beemazing.onrender.com/api/rewards", {
+            const updateResponse = await fetch("https://beemazing.onrender.com/api/rewards", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ adminEmail, user: userName, amount: newReward })
             });
+            const updateData = await updateResponse.json();
+            if (!updateResponse.ok) throw new Error(updateData.error || "Failed to update rewards");
+
+            console.log("sellReward: Server response:", updateData);
 
             // Refresh the UI
             await loadUserReward(userName);
@@ -1263,20 +1305,51 @@ async function sellReward(userName, amount) {
 }
 
 
+
+
+
+
+
+
+
 async function resetUserReward(userName) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     try {
-        // Set the user's reward to 0
-        await fetch("https://beemazing.onrender.com/api/rewards", {
+        console.log(`Attempting to reset reward for user: ${userName}, adminEmail: ${adminEmail}`);
+
+        // Fetch the current reward to debug the initial state
+        const response = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
+        const rewards = data.rewards || {};
+        console.log(`Current reward state before reset:`, rewards);
+
+        // Force set the user's reward to 0
+        const resetResponse = await fetch("https://beemazing.onrender.com/api/rewards", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ adminEmail, user: userName, amount: 0 })
         });
-        console.log(`Reset ${userName}'s reward to 0`);
+        const resetData = await resetResponse.json();
+        if (!resetResponse.ok) throw new Error(resetData.error || "Failed to reset reward");
+
+        console.log(`Reset response from server:`, resetData);
+        console.log(`Reward for ${userName} reset to 0`);
+
+        // Verify the reset by fetching the reward again
+        const verifyResponse = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const verifyData = await verifyResponse.json();
+        if (!verifyResponse.ok) throw new Error(verifyData.error || "Failed to verify reset");
+        console.log(`Reward state after reset:`, verifyData.rewards);
+
+        // Refresh the UI
         await loadUserReward(userName);
-        await updateLuckyChestProgress(userName, 0); // Update chest progress to reflect the reset
+        await updateLuckyChestProgress(userName, 0);
     } catch (err) {
         console.error("Error resetting user reward:", err);
+        // Fallback: If the server fails, display 0 in the UI anyway
+        document.getElementById("rewardAmount").textContent = "0";
+        alert("Failed to reset reward on the server, but UI has been updated to 0. Please reload the page.");
     }
 }
 
