--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -914,8 +914,9 @@ document.addEventListener("DOMContentLoaded", () => {
             }
         });
 
-        // Remove the resetUserReward call after confirming the reset
+        /* Remove the resetUserReward call after confirming the reset
         resetUserReward(userName);
+        */
 
         populateUserDropdown(userName);
         loadUserTasks(userName);
@@ -1310,7 +1311,7 @@ async function sellReward(userName, amount) {
 
 
 
-
+/*
 
 async function resetUserReward(userName) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
@@ -1353,7 +1354,7 @@ async function resetUserReward(userName) {
     }
 }
 
-
+*/
 
 
 
