--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -1154,6 +1154,11 @@ const isCompleted = userTotal >= requiredTimes;
 
 
 
+
+
+
+
+
 async function loadUserReward(userName) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     try {
@@ -1161,20 +1166,19 @@ async function loadUserReward(userName) {
         const data = await response.json();
         if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
         const rewards = data.rewards || {};
-        const rawReward = rewards[userName] || 0;
+        // Ensure the reward is treated as a number, default to 0 if undefined
+        const rawReward = rewards[userName] ?? 0;
         const userReward = Number(rawReward);
 
-        // Log the raw and parsed values for debugging
         console.log(`loadUserReward: userName=${userName}, rawReward=${rawReward}, userReward=${userReward}`);
 
-        // Handle extremely large numbers or invalid values
         if (isNaN(userReward) || !isFinite(userReward)) {
-            console.warn(`Invalid reward value for ${userName}: ${rawReward}. Resetting to 0.`);
-            await resetUserReward(userName);
+            console.warn(`Invalid reward value for ${userName}: ${rawReward}. Setting to 0.`);
+            // Instead of resetting, just display 0 and log the issue
             document.getElementById("rewardAmount").textContent = "0";
         } else {
-            // Use toFixed(0) to avoid scientific notation and ensure integer display
-            document.getElementById("rewardAmount").textContent = userReward.toFixed(0);
+            // Ensure integer display without scientific notation
+            document.getElementById("rewardAmount").textContent = Math.floor(userReward);
         }
     } catch (err) {
         console.error("Error loading user reward:", err);
@@ -1187,60 +1191,60 @@ async function loadUserReward(userName) {
 
 
 
-
 async function updateUserReward(userName, amount) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     try {
         // Ensure amount is a number
         const numericAmount = Number(amount);
-        if (isNaN(numericAmount)) {
+        if (isNaN(numericAmount) || !isFinite(numericAmount)) {
             console.error("Amount is not a valid number:", amount);
             throw new Error("Amount must be a valid number");
         }
 
-        // Fetch current rewards to ensure we’re adding correctly
+        // Fetch current rewards
         const response = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
         const data = await response.json();
         if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
         const rewards = data.rewards || {};
-        const rawReward = rewards[userName] || 0;
+        const rawReward = rewards[userName] ?? 0;
         const currentReward = Number(rawReward);
 
-        // Log the values for debugging
         console.log(`updateUserReward: userName=${userName}, rawReward=${rawReward}, currentReward=${currentReward}, numericAmount=${numericAmount}`);
 
-        // Handle invalid reward values
         if (isNaN(currentReward) || !isFinite(currentReward)) {
-            console.warn(`Invalid reward value for ${userName}: ${rawReward}. Resetting to 0.`);
-            await resetUserReward(userName);
+            console.warn(`Invalid reward value for ${userName}: ${rawReward}. Treating as 0.`);
+            // Instead of resetting, treat as 0 and proceed
+            const newReward = numericAmount;
+            const updateResponse = await fetch("https://beemazing.onrender.com/api/rewards", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ adminEmail, user: userName, amount: newReward })
+            });
+            const updateData = await updateResponse.json();
+            if (!updateResponse.ok) throw new Error(updateData.error || "Failed to update rewards");
+            console.log("updateUserReward: Server response:", updateData);
             return;
         }
 
         // Calculate new reward
         const newReward = currentReward + numericAmount;
-
-        // Log the new reward
         console.log(`updateUserReward: newReward=${newReward}`);
 
         // Update the server with the new total
         const updateResponse = await fetch("https://beemazing.onrender.com/api/rewards", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ adminEmail, user: userName, amount: newReward })
+            body: JSON.stringify({ adminEmail, user: userName, amount: Math.floor(newReward) })
         });
         const updateData = await updateResponse.json();
         if (!updateResponse.ok) throw new Error(updateData.error || "Failed to update rewards");
 
-        // Log the server response
         console.log("updateUserReward: Server response:", updateData);
     } catch (err) {
         console.error("Error updating user reward:", err);
         throw err;
     }
 }
-
-
-
 
 
 
@@ -1255,16 +1259,14 @@ async function sellReward(userName, amount) {
         const data = await response.json();
         if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
         const rewards = data.rewards || {};
-        const rawReward = rewards[userName] || 0;
+        const rawReward = rewards[userName] ?? 0;
         const userReward = Number(rawReward);
 
-        // Log the raw and parsed values
         console.log(`sellReward: userName=${userName}, rawReward=${rawReward}, userReward=${userReward}`);
 
-        // Handle invalid or extremely large reward values
         if (isNaN(userReward) || !isFinite(userReward)) {
-            console.warn(`Invalid reward value for ${userName}: ${rawReward}. Resetting to 0.`);
-            await resetUserReward(userName);
+            console.warn(`Invalid reward value for ${userName}: ${rawReward}. Treating as 0.`);
+            alert("Invalid reward value. Please try again.");
             return;
         }
 
@@ -1279,14 +1281,13 @@ async function sellReward(userName, amount) {
             // Calculate the new reward after selling
             const newReward = userReward - numericAmount;
 
-            // Log the calculation
             console.log(`sellReward: userReward=${userReward}, numericAmount=${numericAmount}, newReward=${newReward}`);
 
             // Update the server with the new total
             const updateResponse = await fetch("https://beemazing.onrender.com/api/rewards", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ adminEmail, user: userName, amount: newReward })
+                body: JSON.stringify({ adminEmail, user: userName, amount: Math.floor(newReward) })
             });
             const updateData = await updateResponse.json();
             if (!updateResponse.ok) throw new Error(updateData.error || "Failed to update rewards");
@@ -1304,9 +1305,6 @@ async function sellReward(userName, amount) {
         alert("Failed to sell honey. Please try again.");
     }
 }
-
-
-
 
 
 
