--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -914,9 +914,9 @@ document.addEventListener("DOMContentLoaded", () => {
             }
         });
 
-        /* Remove the resetUserReward call after confirming the reset
+        // Remove the resetUserReward call after confirming the reset
         resetUserReward(userName);
-        */
+        
 
         populateUserDropdown(userName);
         loadUserTasks(userName);
@@ -1309,7 +1309,7 @@ async function sellReward(userName, amount) {
 
 
 
-/*
+
 
 async function resetUserReward(userName) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
@@ -1352,7 +1352,7 @@ async function resetUserReward(userName) {
     }
 }
 
-*/
+
 
 
 
