--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -768,6 +768,73 @@
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* reset button */
+
+#resetButton {
+    background: var(--danger-color); /* Red to indicate a destructive action */
+    color: var(--accent-color);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    margin-left: 20px;
+    transition: background-color 0.3s ease;
+}
+
+#resetButton:hover {
+    background: #FF6659; /* Lighter red on hover */
+}
+
+@media (max-width: 480px) {
+    #resetButton {
+        margin-left: 0;
+        margin-top: 10px;
+        width: 100%;
+    }
+}
+
+
+
+/* reset button */
+
+
+
+
+
+
     </style>
 </head>
 <body>
@@ -817,6 +884,7 @@
             <div class="reward-container">
                 <p><strong>Honey:</strong> <span id="rewardAmount">0</span> 🍯</p>
                 <button id="sellButton">Sell Honey</button>
+                <button id="resetButton">Reset Honey</button>
             </div>
             <h3>Assigned Tasks:</h3>
             <div id="userTasks" class="task-list">
@@ -868,7 +936,13 @@
 
 
 
-
+document.getElementById('resetButton').addEventListener('click', () => {
+    const urlParams = new URLSearchParams(window.location.search);
+    const userName = urlParams.get('user');
+    if (confirm("Are you sure you want to reset the honey to 0?")) {
+        resetUserReward(userName);
+    }
+});
 
 
 document.addEventListener("DOMContentLoaded", () => {
@@ -914,9 +988,9 @@ document.addEventListener("DOMContentLoaded", () => {
             }
         });
 
-        // Remove the resetUserReward call after confirming the reset
+        /* Remove the resetUserReward call after confirming the reset
         resetUserReward(userName);
-        
+        */
 
         populateUserDropdown(userName);
         loadUserTasks(userName);
@@ -1155,10 +1229,6 @@ const isCompleted = userTotal >= requiredTimes;
 
 
 
-
-
-
-
 async function loadUserReward(userName) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     try {
@@ -1166,19 +1236,16 @@ async function loadUserReward(userName) {
         const data = await response.json();
         if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
         const rewards = data.rewards || {};
-        // Ensure the reward is treated as a number, default to 0 if undefined
-        const rawReward = rewards[userName] ?? 0;
+        const rawReward = rewards[userName] || 0;
         const userReward = Number(rawReward);
 
         console.log(`loadUserReward: userName=${userName}, rawReward=${rawReward}, userReward=${userReward}`);
 
         if (isNaN(userReward) || !isFinite(userReward)) {
-            console.warn(`Invalid reward value for ${userName}: ${rawReward}. Setting to 0.`);
-            // Instead of resetting, just display 0 and log the issue
+            console.warn(`Invalid reward value for ${userName}: ${rawReward}. Displaying as 0.`);
             document.getElementById("rewardAmount").textContent = "0";
         } else {
-            // Ensure integer display without scientific notation
-            document.getElementById("rewardAmount").textContent = Math.floor(userReward);
+            document.getElementById("rewardAmount").textContent = userReward;
         }
     } catch (err) {
         console.error("Error loading user reward:", err);
@@ -1194,52 +1261,13 @@ async function loadUserReward(userName) {
 async function updateUserReward(userName, amount) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     try {
-        // Ensure amount is a number
-        const numericAmount = Number(amount);
-        if (isNaN(numericAmount) || !isFinite(numericAmount)) {
-            console.error("Amount is not a valid number:", amount);
-            throw new Error("Amount must be a valid number");
-        }
-
-        // Fetch current rewards
-        const response = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
-        const data = await response.json();
-        if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
-        const rewards = data.rewards || {};
-        const rawReward = rewards[userName] ?? 0;
-        const currentReward = Number(rawReward);
-
-        console.log(`updateUserReward: userName=${userName}, rawReward=${rawReward}, currentReward=${currentReward}, numericAmount=${numericAmount}`);
-
-        if (isNaN(currentReward) || !isFinite(currentReward)) {
-            console.warn(`Invalid reward value for ${userName}: ${rawReward}. Treating as 0.`);
-            // Instead of resetting, treat as 0 and proceed
-            const newReward = numericAmount;
-            const updateResponse = await fetch("https://beemazing.onrender.com/api/rewards", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ adminEmail, user: userName, amount: newReward })
-            });
-            const updateData = await updateResponse.json();
-            if (!updateResponse.ok) throw new Error(updateData.error || "Failed to update rewards");
-            console.log("updateUserReward: Server response:", updateData);
-            return;
-        }
-
-        // Calculate new reward
-        const newReward = currentReward + numericAmount;
-        console.log(`updateUserReward: newReward=${newReward}`);
-
-        // Update the server with the new total
-        const updateResponse = await fetch("https://beemazing.onrender.com/api/rewards", {
+        const response = await fetch("https://beemazing.onrender.com/api/rewards", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ adminEmail, user: userName, amount: Math.floor(newReward) })
+            body: JSON.stringify({ adminEmail, user: userName, amount })
         });
-        const updateData = await updateResponse.json();
-        if (!updateResponse.ok) throw new Error(updateData.error || "Failed to update rewards");
-
-        console.log("updateUserReward: Server response:", updateData);
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Failed to update rewards");
     } catch (err) {
         console.error("Error updating user reward:", err);
         throw err;
@@ -1248,55 +1276,23 @@ async function updateUserReward(userName, amount) {
 
 
 
-
-
-
 async function sellReward(userName, amount) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     try {
-        // Fetch current user rewards
         const response = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
         const data = await response.json();
         if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
         const rewards = data.rewards || {};
-        const rawReward = rewards[userName] ?? 0;
-        const userReward = Number(rawReward);
+        const userReward = rewards[userName] || 0;
 
-        console.log(`sellReward: userName=${userName}, rawReward=${rawReward}, userReward=${userReward}`);
-
-        if (isNaN(userReward) || !isFinite(userReward)) {
-            console.warn(`Invalid reward value for ${userName}: ${rawReward}. Treating as 0.`);
-            alert("Invalid reward value. Please try again.");
-            return;
-        }
-
-        // Ensure the amount to sell is a number
-        const numericAmount = Number(amount);
-        if (isNaN(numericAmount) || numericAmount <= 0) {
-            throw new Error("Amount to sell must be a valid positive number");
-        }
-
-        // Check if the user has enough honey to sell
-        if (userReward >= numericAmount) {
-            // Calculate the new reward after selling
-            const newReward = userReward - numericAmount;
-
-            console.log(`sellReward: userReward=${userReward}, numericAmount=${numericAmount}, newReward=${newReward}`);
-
-            // Update the server with the new total
-            const updateResponse = await fetch("https://beemazing.onrender.com/api/rewards", {
+        if (userReward >= amount) {
+            await fetch("https://beemazing.onrender.com/api/rewards", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ adminEmail, user: userName, amount: Math.floor(newReward) })
+                body: JSON.stringify({ adminEmail, user: userName, amount: -amount })
             });
-            const updateData = await updateResponse.json();
-            if (!updateResponse.ok) throw new Error(updateData.error || "Failed to update rewards");
-
-            console.log("sellReward: Server response:", updateData);
-
-            // Refresh the UI
             await loadUserReward(userName);
-            await updateLuckyChestProgress(userName, -numericAmount);
+            await updateLuckyChestProgress(userName, -amount);
         } else {
             alert("Not enough honey!");
         }
@@ -1310,49 +1306,23 @@ async function sellReward(userName, amount) {
 
 
 
-
 async function resetUserReward(userName) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     try {
-        console.log(`Attempting to reset reward for user: ${userName}, adminEmail: ${adminEmail}`);
-
-        // Fetch the current reward to debug the initial state
-        const response = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
-        const data = await response.json();
-        if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
-        const rewards = data.rewards || {};
-        console.log(`Current reward state before reset:`, rewards);
-
-        // Force set the user's reward to 0
-        const resetResponse = await fetch("https://beemazing.onrender.com/api/rewards", {
+        const response = await fetch("https://beemazing.onrender.com/api/rewards", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ adminEmail, user: userName, amount: 0 })
         });
-        const resetData = await resetResponse.json();
-        if (!resetResponse.ok) throw new Error(resetData.error || "Failed to reset reward");
-
-        console.log(`Reset response from server:`, resetData);
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Failed to reset rewards");
         console.log(`Reward for ${userName} reset to 0`);
-
-        // Verify the reset by fetching the reward again
-        const verifyResponse = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
-        const verifyData = await verifyResponse.json();
-        if (!verifyResponse.ok) throw new Error(verifyData.error || "Failed to verify reset");
-        console.log(`Reward state after reset:`, verifyData.rewards);
-
-        // Refresh the UI
-        await loadUserReward(userName);
-        await updateLuckyChestProgress(userName, 0);
+        await loadUserReward(userName); // Refresh the UI
     } catch (err) {
         console.error("Error resetting user reward:", err);
-        // Fallback: If the server fails, display 0 in the UI anyway
-        document.getElementById("rewardAmount").textContent = "0";
-        alert("Failed to reset reward on the server, but UI has been updated to 0. Please reload the page.");
+        alert("Failed to reset rewards. Please try again.");
     }
 }
-
-
 
 
 
