--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -999,32 +999,35 @@ document.addEventListener("DOMContentLoaded", () => {
 
         // Process addPoints only if it hasn't been processed for this session
         if (addPoints > 0) {
-            const sessionKey = `addPointsProcessed_${userName}_${addPoints}`;
-            const hasProcessed = localStorage.getItem(sessionKey);
+    const numericAddPoints = Number(addPoints); // Ensure it's a number
+    if (isNaN(numericAddPoints)) {
+        console.error(`Invalid addPoints value: ${addPoints}`);
+        return;
+    }
+    const sessionKey = `addPointsProcessed_${userName}_${numericAddPoints}`;
+    const hasProcessed = localStorage.getItem(sessionKey);
 
-            if (!hasProcessed) {
-                console.log(`Processing addPoints: ${addPoints} for user: ${userName}`);
-                setTimeout(async () => {
-                    try {
-                        await updateUserReward(userName, addPoints);
-                        triggerHoneyRain(addPoints);
-                        await loadUserReward(userName);
-                        await updateLuckyChestProgress(userName, addPoints);
-
-                        // Mark addPoints as processed
-                        localStorage.setItem(sessionKey, "true");
-
-                        // Clear the addPoints parameter from the URL
-                        const newUrl = `${window.location.pathname}?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
-                        window.history.replaceState({}, document.title, newUrl);
-                    } catch (err) {
-                        console.error("Error processing addPoints:", err);
-                    }
-                }, 500);
-            } else {
-                console.log(`addPoints (${addPoints}) already processed for user: ${userName}`);
+    if (!hasProcessed) {
+        console.log(`Processing addPoints: ${numericAddPoints} for user: ${userName}, type=${typeof numericAddPoints}`);
+        setTimeout(async () => {
+            try {
+                await updateUserReward(userName, numericAddPoints);
+                triggerHoneyRain(numericAddPoints);
+                await loadUserReward(userName);
+                await updateLuckyChestProgress(userName, numericAddPoints);
+                // Mark addPoints as processed
+                localStorage.setItem(sessionKey, "true");
+                // Clear the addPoints parameter from the URL
+                const newUrl = `${window.location.pathname}?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
+                window.history.replaceState({}, document.title, newUrl);
+            } catch (err) {
+                console.error("Error processing addPoints:", err);
             }
-        }
+        }, 500);
+    } else {
+        console.log(`addPoints (${numericAddPoints}) already processed for user: ${userName}`);
+    }
+}
 
         // Listen for reward updates from other tabs (e.g., userAdmin.html)
         window.addEventListener("storage", async (event) => {
@@ -1228,7 +1231,6 @@ const isCompleted = userTotal >= requiredTimes;
 
 
 
-
 async function loadUserReward(userName) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     try {
@@ -1237,15 +1239,15 @@ async function loadUserReward(userName) {
         if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
         const rewards = data.rewards || {};
         const rawReward = rewards[userName] || 0;
-        const userReward = Number(rawReward);
+        const userReward = Number(rawReward); // Ensure it's a number
 
-        console.log(`loadUserReward: userName=${userName}, rawReward=${rawReward}, userReward=${userReward}`);
+        console.log(`loadUserReward: userName=${userName}, rawReward=${rawReward}, userReward=${userReward}, type=${typeof userReward}`);
 
         if (isNaN(userReward) || !isFinite(userReward)) {
             console.warn(`Invalid reward value for ${userName}: ${rawReward}. Displaying as 0.`);
-            document.getElementById("rewardAmount").textContent = "0";
+            document.getElementById("rewardAmount").textContent = 0;
         } else {
-            document.getElementById("rewardAmount").textContent = userReward;
+            document.getElementById("rewardAmount").textContent = Math.floor(userReward); // Avoid decimals
         }
     } catch (err) {
         console.error("Error loading user reward:", err);
@@ -1257,17 +1259,25 @@ async function loadUserReward(userName) {
 
 
 
-
 async function updateUserReward(userName, amount) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
+    const numericAmount = Number(amount); // Ensure amount is a number
+    if (isNaN(numericAmount)) {
+        console.error(`Invalid amount for updateUserReward: ${amount}`);
+        throw new Error("Invalid reward amount");
+    }
     try {
         const response = await fetch("https://beemazing.onrender.com/api/rewards", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ adminEmail, user: userName, amount })
+            body: JSON.stringify({ adminEmail, user: userName, amount: numericAmount })
         });
         const data = await response.json();
         if (!response.ok) throw new Error(data.error || "Failed to update rewards");
+        console.log(`Updated reward for ${userName}: ${numericAmount}, serverResponse=`, data);
+        // Trigger storage event for other tabs
+        localStorage.setItem("rewardUpdate", JSON.stringify({ user: userName, amount: numericAmount, timestamp: Date.now() }));
+        localStorage.removeItem("rewardUpdate"); // Clear to trigger change
     } catch (err) {
         console.error("Error updating user reward:", err);
         throw err;
@@ -1305,24 +1315,40 @@ async function sellReward(userName, amount) {
 
 
 
-
 async function resetUserReward(userName) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     try {
-        const response = await fetch("https://beemazing.onrender.com/api/rewards", {
+        // Fetch current rewards
+        const response = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
+        const rewards = data.rewards || {};
+
+        // Explicitly set the user's reward to 0
+        rewards[userName] = 0;
+
+        // Send updated rewards to server
+        const updateResponse = await fetch("https://beemazing.onrender.com/api/rewards", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ adminEmail, user: userName, amount: 0 })
+            body: JSON.stringify({ adminEmail, user: userName, amount: 0, rewards })
         });
-        const data = await response.json();
-        if (!response.ok) throw new Error(data.error || "Failed to reset rewards");
-        console.log(`Reward for ${userName} reset to 0`);
+        const updateData = await updateResponse.json();
+        if (!updateResponse.ok) throw new Error(updateData.error || "Failed to reset rewards");
+
+        console.log(`Reward for ${userName} reset to 0, serverResponse=`, updateData);
         await loadUserReward(userName); // Refresh the UI
+        // Trigger storage event for other tabs
+        localStorage.setItem("rewardUpdate", JSON.stringify({ user: userName, amount: 0, timestamp: Date.now() }));
+        localStorage.removeItem("rewardUpdate");
     } catch (err) {
         console.error("Error resetting user reward:", err);
         alert("Failed to reset rewards. Please try again.");
     }
 }
+
+
+
 
 
 
