restore password back to #11 email check commented out

--- a/register.html
+++ b/register.html
@@ -340,7 +340,7 @@
     <div class="logo">
       <img src="https://i.postimg.cc/x1fDPQPX/pngtree-honey-bee-logo-design-vector-png-image-12507314-removebg-preview.png" alt="BeeMazing Logo">
     </div>
-    <h2 id="formTitle">Register z14</h2>
+    <h2 id="formTitle">Register z11</h2>
     <form id="authForm" novalidate>
       <div id="emailGroup" class="input-group email">
         <input type="email" id="email" placeholder="Email" required />
@@ -440,7 +440,8 @@ function showResetPasswordForm() {
   resetPasswordForm.reset();
 }
   
-    /* Email validation regex
+    // Email validation regex
+    /*
     const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
   */
 
@@ -469,21 +470,24 @@ function showResetPasswordForm() {
   const confirmPassword = document.getElementById("confirmPassword").value.trim();
 
   // Validate email for forgot password
+/*
   if (isResettingPassword && !emailRegex.test(email)) {
     message.style.color = "#D32F2F";
     message.textContent = "❌ Please enter a valid email";
     return;
-  } 
+  }
+
+  */
 
   // Validate inputs for register/login
   if (!isResettingPassword) {
-    /* if (!emailRegex.test(email)) {
+/*
+    if (!emailRegex.test(email)) {
       message.style.color = "#D32F2F";
       message.textContent = "❌ Please enter a valid email";
       return;
     }
     */
-
     /* if (!passwordRegex.test(password)) {
       message.style.color = "#D32F2F";
       message.textContent = "❌ Password must be at least 8 characters and include a number";
