--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -545,11 +545,6 @@ async function fetchUsers() {
   }
 }
 
-
-
-
-
-
 async function handleDecision(title, date, index, decision, user, event) {
   try {
     const button = event.target;
@@ -576,7 +571,7 @@ async function handleDecision(title, date, index, decision, user, event) {
     const data = await response.json();
     if (!response.ok) throw new Error(data.error || "Failed to process decision");
 
-    setTimeout(() => loadTasks(), 100); // Reduced delay for faster UI update
+    setTimeout(() => loadTasks(), 500);
   } catch (err) {
     console.error("Error processing decision:", err);
     const errorDiv = document.createElement("div");
@@ -590,10 +585,6 @@ async function handleDecision(title, date, index, decision, user, event) {
     setTimeout(() => errorDiv.remove(), 3000);
   }
 }
-
-
-
-
 
 async function handleReplace(title, date, index, originalUser, event) {
   const taskEntry = event.target.closest(".task-entry");
